--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/author.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/author.jspx
@@ -53,7 +53,7 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="sidebar">
-			<sidebar:sidebarTagCloudItem requPath="${requPath}" cmd="${command.tagcloud}" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
+			<sidebar:sidebarTagCloudItem requPath="${requPath}" cmd="${command.tagcloud}" showTooltips="${command.context.loginUser.settings.tagboxTooltip}" scope="${command.scope.name()}"/>
 		</jsp:attribute>
 	</layout:resourceLayout>
 </jsp:root>
