--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/bibtexkey.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/bibtexkey.jspx
@@ -30,26 +30,25 @@
 				</jsp:attribute>
 			</nav:breadcrumbs>
 		</jsp:attribute>
-		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.bibtexkey" formAction="/bibtexkey" formInputName="requestedKey" formInputValue="${command.requestedKey}">
-				<jsp:attribute name="pathPart">
-					<c:if test="${not empty command.requestedUser}">
-						<a href="${relativeUrlGenerator.getUserUrlByUserName(command.requestedUser)}">${fn:escapeXml(command.requestedUser)}</a> 
-				 	</c:if>
-				</jsp:attribute>
-				<jsp:attribute name="formExtra">
-					<c:if test="${not empty command.requestedUser}">
-						<input type="hidden" name="requestedUser" value="${fn:escapeXml(command.requestedUser)}" />
-					</c:if>
-				</jsp:attribute>
-				
+		<jsp:attribute name="heading">		
+			<c:choose>
+				<c:when test="${not empty command.scope and command.scope.name() ne 'LOCAL'}">
+					<c:set var="pathMessageKey" value="navi.federatedBibtexKey"/>
+					<c:set var="bibtexKeyUrl" value="${relativeUrlGenerator.getPublicationUrlByBibTexKey(command.requestedKey)}?scope=${command.scope.name()}"/>
+				</c:when>
+				<c:otherwise>
+					<c:set var="pathMessageKey" value="navi.bibtexkey"/>							
+					<c:set var="bibtexKeyUrl" value="${relativeUrlGenerator.getPublicationUrlByBibTexKey(command.requestedKey)}"/>
+				</c:otherwise>
+			</c:choose>
+			<parts:search scope="${command.scope}" pathMessageKey="${pathMessageKey}" formAction="/bibtexkey" formInputName="requestedKey" formInputValue="${command.requestedKey}">
 			</parts:search>	
 		</jsp:attribute>
 		
 		
 		<jsp:attribute name="sidebar">
 
-			<sidebar:sidebarTagCloudItem requPath="tag" cmd="${command.tagcloud}" tagSizeMode="home"/>
+			<sidebar:sidebarTagCloudItem requPath="tag" cmd="${command.tagcloud}" tagSizeMode="home" scope="${command.scope.name()}"/>
 			
 			<!-- enable autocompletion for bibtexkeys -->
 			<c:if test="${not empty command.requestedUser}"> 
