less variables for max-width in media query

--- a/bibsonomy-webapp/src/main/webapp/resources/css/MobileMenu.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/MobileMenu.less
@@ -1,9 +1,9 @@
-@media (max-width: 767px) {
+@media (max-width: @screen-sm) {
 	.container.navi {
 		padding-left: 15px !important;
 	}
 }
-@media (max-width: 990px) {
+@media (max-width: @screen-md) {
 	#search .input-group {
 		margin-bottom: 1em;
 	}
