--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/person/show.jspx
@@ -272,7 +272,7 @@
 															<c:forEach var="relation" items="${post.resourcePersonRelations}">
 																<c:if test="${relation.relatorCode eq role}">
 																	<span class='resourcePersonRelation_${relation.id}'>
-																		<a href="/person/${relation.personName.personId}/${relation.personName}">${relation.personName.firstName} ${relation.personName.lastName} </a>
+																		<a href="/person/${relation.person.id}/${relation.person.mainName}">${relation.person.mainName.firstName} ${relation.person.mainName.lastName} </a>
 																		<!--  <span data-toggle='modal' data-target="#editRole" data-resource-title="${post.resource.title}" data-person-name="${relation.personName.firstName} ${relation.personName.lastName}" data-relation-simhash1="${relation.simhash1}" data-relation-simhash2='${relation.simhash2}' data-person-role="${role}" style='color:orange;cursor:pointer' href="#editRole" class='editRole glyphicon glyphicon-pencil'>&#160;</span> -->
 																		<span data-toggle='modal' data-target="#deleteRole" data-resourcePersonRelation-id='${relation.id}' style='color:darkred;cursor:pointer' href="#deleteRole" class='deleteRole glyphicon glyphicon-remove'>&#160;</span>
 																	</span>
@@ -321,7 +321,7 @@
 															<c:forEach var="relation" items="${post.resourcePersonRelations}">
 																<c:if test="${relation.relatorCode eq role}">
 																	<span class='resourcePersonRelation_${relation.id}'>
-																		<a href="/person/${relation.personName.personId}/${relation.personName}">${relation.personName.firstName} ${relation.personName.lastName} </a>
+																		<a href="/person/${relation.person.id}/${relation.person.mainName}">${relation.person.mainName.firstName} ${relation.person.mainName.lastName} </a>
 																		<!--  <span data-toggle='modal' data-target="#editRole" data-resource-title="${post.resource.title}" data-person-name="${relation.personName.firstName} ${relation.personName.lastName}" data-relation-simhash1="${relation.simhash1}" data-relation-simhash2='${relation.simhash2}' data-person-role="${role}" style='color:orange;cursor:pointer' href="#editRole" class='editRole glyphicon glyphicon-pencil'>&#160;</span> -->
 																		<span data-toggle='modal' data-target="#deleteRole" data-resourcePersonRelation-id='${relation.id}' style='color:darkred;cursor:pointer' href="#deleteRole" class='deleteRole glyphicon glyphicon-remove'>&#160;</span>
 																	</span>
