--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
@@ -45,6 +45,8 @@
 			
 			<groupsettings:profile command="${command}" />
 			
+			<groupsettings:cv command="${command}" />
+			
 			<groupsettings:userlists group="${group}" />
 			
 			<groupsettings:delete group="${group}" />
