--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
@@ -28,6 +28,14 @@
 			<script type="text/javascript" src="${resdir}/javascript/cv/handlers.js"><!--  --></script>
 			<script type="text/javascript" src="${resdir}/javascript/profile/handlers.js"><!-- --></script>
 			<script type="text/javascript" src="${resdir}/javascript/bs/settings.js"><!-- keep me --></script>
+			<script type="text/javascript" src="${resdir}/javascript/bs/bootstrap-table.min.js"><!-- keep me --></script>
+			<link rel="stylesheet" type="text/css" href="${resdir}/css/bootstrap-table.min.css" />
+			<style type="text/css">
+				.bootstrap-table .fixed-table-container {border: none;} 
+				.bootstrap-table .fixed-table-container .table-no-bordered th {border: none;} 
+				.bootstrap-table .fixed-table-container .table-no-bordered td {border: none;} 
+			
+			</style>
 		</jsp:attribute>
 
 		<jsp:attribute name="breadcrumbs">
