--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/person/show.jspx
@@ -417,8 +417,9 @@
 			</fieldset>
 		</jsp:attribute>
 		<jsp:attribute name="modalFooter">
-			<form action="/postPublication/${command.person.id}/${command.person.mainName.lastName}" method="post">
-				<input type="hidden" name='formAction' value='newThesis'/>
+			<form action="/postPublication" method="post">
+				<input type="hidden" name='personId' value='${command.person.id}'/>
+				<input type="hidden" name='personRole' value='AUTHOR'/>
 				<input type="submit" class="btn btn-primary pull-left" name='submit' value='${textNewThesisButton}' />
 			</form>
 			<form action="" method="post" class='form-inline'>
@@ -442,7 +443,9 @@
 			</fieldset>
 		</jsp:attribute>
 		<jsp:attribute name="modalFooter">
-			<form action="/postPublication/supervisor/${command.person.id}/${command.person.mainName.lastName}" method="post">
+			<form action="/postPublication" method="post">
+				<input type="hidden" name='personId' value='${command.person.id}'/>
+				<input type="hidden" name='personRole' value='REVIEWER'/><!-- TODO: this should be selectable via a dropdown button -->
 				<input type="hidden" name='formAction' value='newThesis'/>
 				<input type="submit" class="btn btn-primary pull-left" name='submit' value='${textNewThesisButton}' />
 			</form>
