--- a/bibsonomy-webapp/src/main/webapp/resources/css/style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/style.less
@@ -2926,3 +2926,13 @@ iframe#pdfViwer{
 #collapse {
 	cursor:pointer;
 }
+
+/******* cv image styles **********/
+.group-cv-image {
+	width:auto !important; 
+	height:auto !important;
+}
+
+.group-cv-image-name {
+	width: auto !important;
+}
