--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/clipboard.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/clipboard.jspx
@@ -14,7 +14,7 @@
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true"/>
 	
-	<fmt:message key="navi.basket" var="pageTitle"/>
+	<fmt:message key="navi.clipboard" var="pageTitle"/>
 	
 	<layout:resourceLayout pageTitle="${pageTitle}" 
 			command="${command}" 
@@ -25,7 +25,7 @@
 			minimizedContentWidth="${true}">
 
 		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.basket"/>
+			<parts:search pathMessageKey="navi.clipboard"/>
 		</jsp:attribute>
 		
 		<!--+
@@ -43,17 +43,17 @@
 				</jsp:attribute>
 				
 				<jsp:attribute name="infoMessage">
-					<fmt:message key="qrcode.info.basket.readerInfoMessage" />
+					<fmt:message key="qrcode.info.clipboard.readerInfoMessage" />
 				</jsp:attribute>
 				
 			</parts:qrcode>
 			
 			<ul>			
 	          <li style="text-align: center;">
-	            <fmt:message key="basket.removeAllVerbose" var="removeAllVerbose"/>
+	            <fmt:message key="clipboard.removeAllVerbose" var="removeAllVerbose"/>
 	          	<button:linkButton name="linkButton" title="${fn:escapeXml(removeAllVerbose)}" href="/ajax/pickUnpickPost?action=clearAll&amp;ckey=${mtl:encodeURI(command.context.ckey)}">
 					<jsp:attribute name="text">
-						<fmt:message key="basket.removeAll"/>
+						<fmt:message key="clipboard.removeAll"/>
 					</jsp:attribute>
 				</button:linkButton>
 	          </li>
@@ -67,15 +67,15 @@
 			<parts:infobox>
 				<jsp:attribute name="infoTextBody">
 		        	<!-- short info, what the clipboard is -->
-		            <fmt:message key="basket.info"/>                 
+		            <fmt:message key="clipboard.info"/>                 
 		
 					<!-- quick links on what you can do -->
 					
-					<p><fmt:message key="basket.info.examples"/></p>
+					<p><fmt:message key="clipboard.info.examples"/></p>
 					<ul class="news">
-						<li><a href="/beditbib/${fn:escapeXml(requPath)}" title="${editPageTags}"><fmt:message key="basket.edit.tags"/></a></li>
-						<li><a href="/export/${fn:escapeXml(requPath)}${requQueryString}"><fmt:message key="basket.export"/></a></li>
-						<li><a href="/beditbib/${fn:escapeXml(requPath)}" title="${editPageTags}"><fmt:message key="basket.delete"/></a></li>
+						<li><a href="/beditbib/${fn:escapeXml(requPath)}" title="${editPageTags}"><fmt:message key="clipboard.edit.tags"/></a></li>
+						<li><a href="/export/${fn:escapeXml(requPath)}${requQueryString}"><fmt:message key="clipboard.export"/></a></li>
+						<li><a href="/beditbib/${fn:escapeXml(requPath)}" title="${editPageTags}"><fmt:message key="clipboard.delete"/></a></li>
 					</ul>
 				</jsp:attribute>
 			</parts:infobox>
