--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/admin/sync.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/admin/sync.jspx
@@ -43,93 +43,96 @@
 				</jsp:attribute>
 			</parts:search>
 		</jsp:attribute>
-		<jsp:attribute name="headerExt">
-			<link rel="stylesheet" type="text/css" href="${resdir}/css/adminlucene.css" />
-			<link rel="stylesheet" href="${resdir}/jquery/plugins/ui/jquery-ui.css" type="text/css" media="all" />
-			<link rel="stylesheet" href="${resdir}/jquery/plugins/ui/ui.theme.css" type="text/css" media="all" />
-			
-	    	<script type="text/javascript" src="${resdir}/jquery/plugins/form/jquery.form.js"><!-- keep me --></script> 
-			<!--  scripts for ajax autocompletion -->
-			<script src="${resdir}/jquery/plugins/bgiframe/jquery.bgiframe.js" type="text/javascript"><!--  --></script>
-			<script src="${resdir}/jquery/plugins/ui/jquery-ui.js" type="text/javascript"><!--  --></script>
-		  	<script src="${resdir}/jquery/plugins/ui/jquery-ui-i18n.js" type="text/javascript"><!--  --></script>
-		</jsp:attribute>
 		
 		<jsp:attribute name="content">
 			<fmt:message var="delete" key="delete"/>
-			<fmt:message var="addService" key="save"/>
 			<fmt:message var="addService" key="synchronization.addService" />
 			<fmt:message var="name" key="name" />
 			<fmt:message var="serviceURI" key="synchronization.service" />
 			<fmt:message var="sslDn" key="synchronization.sslDn" />
 			<fmt:message var="secureAPI" key="synchronization.secureAPI" />
 				
-				<!-- CLIENTS -->
-				<form:form class="form-horizontal" action="${relativeUrlGenerator.getAdminUrlByName('sync')}?action=createService" method="POST" id="clientForm">
-					<fieldset id="clients" class="fsInner">
-						<legend><label><c:out value="Clients"/></label></legend>
-						<c:forEach var="service" items="${command.avlClients}">
-							<span>
-								<li>
-									<p><b><c:out value="${name}: "/></b>
-									<c:out value="${service.name} ("/>
-									<a href="${relativeUrlGenerator.getAdminUrlByName('sync')}?action=deleteService&amp;service.service=${fn:escapeXml(service)}&amp;server=false">
-										<c:out value="${delete}" />
-									</a>
-									<c:out value=")"/><br/>
-									<b><c:out value="${serviceURI}: "/></b>
-									<c:out value=" ${service.service} "/><br/>
-									<b><c:out value="${sslDn}: "/></b>
-									<c:out value=" ${service.sslDn}"/></p>
-								</li>
-							</span>	
-						</c:forEach>							
-						<div class="form-group"> 
-							<h2><c:out value="${addService}"/></h2> 
-							<bsform:input labelColSpan="4" inputColSpan="8" path="service.name" noHelp="true" labelKey="name"></bsform:input>
-							<bsform:input labelColSpan="4" inputColSpan="8" path="service.service" noHelp="true" labelKey="synchronization.service"></bsform:input>
-							<bsform:input labelColSpan="4" inputColSpan="8" path="service.sslDn" noHelp="true" labelKey="synchronization.sslDn"></bsform:input>
-						</div>						
-						<div class="col-sm-offset-4 col-sm-8">
-							<input type="hidden" value="false" name="server"/>
-							<input type="submit" class="btn btn-default btn-primary" value="${addService}"/>
-						</div>
-				</fieldset>
-				</form:form>
-				
-				<!-- SERVERS -->
-				<form:form class="form-horizontal" action="${relativeUrlGenerator.getAdminUrlByName('sync')}?action=createService" method="POST" id="serverForm">
-					<fieldset id="server" class="fsInner">
-						<legend><label><c:out value="Server"/></label></legend>
-						<c:forEach var="service" items="${command.avlServer}">
-							<span>
-								<li>
-									<p><b><c:out value="${name}: "/></b>
-									<c:out value="${service.name} ("/>
-									<a href="${relativeUrlGenerator.getAdminUrlByName('sync')}?action=deleteService&amp;service.service=${fn:escapeXml(service)}&amp;server=true">
-										<c:out value="${delete}" />
-									</a>
-									<c:out value=")"/><br/>
-									<b><c:out value="${serviceURI}: "/></b>
-									<c:out value=" ${service.service} "/><br/>
-									<b><c:out value="${secureAPI}: "/></b>
-									<c:out value=" ${service.secureAPI}"/></p>
-								</li>
-							</span>
-						</c:forEach>
-						<div class="form-group"> 
-							<h2><c:out value="${addService}"/></h2> 
-							<bsform:input labelColSpan="4" inputColSpan="8" path="service.name" noHelp="true" labelKey="name"></bsform:input>
-							<bsform:input labelColSpan="4" inputColSpan="8" path="service.service" noHelp="true" labelKey="synchronization.service"></bsform:input>
-							<bsform:input labelColSpan="4" inputColSpan="8" path="service.secureAPI" noHelp="true" labelKey="synchronization.secureAPI"></bsform:input>
-						</div>						
-						<div class="col-sm-offset-4 col-sm-8">
-							<input type="hidden" value="false" name="server"/>
-							<input type="submit" class="btn btn-default btn-primary" value="${addService}"/>
-						</div>
-					</fieldset>
-				</form:form>
+			<!-- CLIENTS -->
+			
+			<h3 class="page-header">Clients</h3>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>name</th>
+						<th><c:out value="${serviceURI}"/></th>
+						<th><c:out value="${sslDn}"/></th>
+						<th>actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					<c:forEach var="service" items="${command.avlClients}">
+						<tr>
+							<td><c:out value="${service.name}"/><!-- keep me --></td>
+							<td><c:out value=" ${service.service}"/></td>
+							<td><c:out value=" ${service.sslDn}"/><!-- keep me --></td>
+							<td>
+								<a href="${relativeUrlGenerator.getAdminUrlByName('sync')}?action=deleteService&amp;service.service=${fn:escapeXml(service)}&amp;server=false">
+									<c:out value="${delete}" />
+								</a>
+							</td>
+						</tr>
+					</c:forEach>
+				</tbody>
+			</table>
+			<h4 class="page-header">add client</h4> 
+			<form:form class="form-horizontal" action="${relativeUrlGenerator.getAdminUrlByName('sync')}?action=createService" method="POST" id="clientForm">
+				<input type="hidden" value="false" name="server"/>
+				<div class="form-group"> 
+					
+					<bsform:input labelColSpan="4" inputColSpan="8" path="service.name" noHelp="true" labelKey="name"></bsform:input>
+					<bsform:input labelColSpan="4" inputColSpan="8" path="service.service" noHelp="true" labelKey="synchronization.service"></bsform:input>
+					<bsform:input labelColSpan="4" inputColSpan="8" path="service.sslDn" noHelp="true" labelKey="synchronization.sslDn"></bsform:input>
+				</div>
+				<div class="col-sm-offset-4 col-sm-8">
+					<input type="submit" class="btn btn-default btn-primary" value="${addService}"/>
+				</div>
+			</form:form>
+			
+			<h3 class="page-header">Servers</h3>
+			<table class="table table-striped">
+				<thead>
+				<tr>
+					<th>name</th>
+					<th><c:out value="${serviceURI}"/></th>
+					<th><c:out value="${secureAPI}"/></th>
+					<th>actions</th>
+				</tr>
+				</thead>
+				<tbody>
+					<c:forEach var="service" items="${command.avlServer}">
+						<tr>
+							<td><c:out value="${service.name}"/><!-- keep me --></td>
+							<td><c:out value=" ${service.service}"/></td>
+							<td><c:out value=" ${service.secureAPI}"/><!-- keep me --></td>
+							<td>
+								<a href="${relativeUrlGenerator.getAdminUrlByName('sync')}?action=deleteService&amp;service.service=${fn:escapeXml(service)}&amp;server=true">
+									<c:out value="${delete}" />
+								</a>
+							</td>
+						</tr>
+					</c:forEach>
+				</tbody>
+			</table>
+			<h4 class="page-header">add server</h4>
+			<!-- SERVERS -->
+			<form:form class="form-horizontal" action="${relativeUrlGenerator.getAdminUrlByName('sync')}?action=createService" method="POST" id="serverForm">
+				<div class="form-group"> 
+					
+					<bsform:input labelColSpan="4" inputColSpan="8" path="service.name" noHelp="true" labelKey="name"></bsform:input>
+					<bsform:input labelColSpan="4" inputColSpan="8" path="service.service" noHelp="true" labelKey="synchronization.service"></bsform:input>
+					<bsform:input labelColSpan="4" inputColSpan="8" path="service.secureAPI" noHelp="true" labelKey="synchronization.secureAPI"></bsform:input>
+				</div>
+				<div class="col-sm-offset-4 col-sm-8">
+					<input type="hidden" value="true" name="server"/>
+					<input type="submit" class="btn btn-default btn-primary" value="${addService}"/>
+				</div>
+			</form:form>
 		
-		</jsp:attribute>		
+		</jsp:attribute>
 	</layout:layout>
 </jsp:root>
