--- a/bibsonomy-webapp/src/main/webapp/resources/css/adminlucene.css
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/adminlucene.css
@@ -18,7 +18,7 @@
 	border-right: 1px solid black;
 }
 
-.indexProperties table td, th {
+.indexProperties table td, .indexProperties table th {
 	padding: 0.5em;
 	border: 1px solid black;
 	border-right: none;
