--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/sync.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/sync.jspx
@@ -40,14 +40,14 @@
 		<jsp:attribute name="infobox">
 			<parts:infobox>
 				<jsp:attribute name="infoTextBody">
-		  		<fmt:message key="synchronization.info" />
-		  		<ul>
-		  			<li><fmt:message key="synchronization.info.plan" /></li>
-		  			<li><fmt:message key="synchronization.info.reset" /></li>
-		  		</ul>
+				<fmt:message key="synchronization.info" />
+				<ul>
+					<li><fmt:message key="synchronization.info.plan" /></li>
+					<li><fmt:message key="synchronization.info.reset" /></li>
+				</ul>
 				</jsp:attribute>
 			</parts:infobox>
-         </jsp:attribute>
+		</jsp:attribute>
 		
 		<jsp:attribute name="content">
 			
@@ -167,7 +167,7 @@
 						<c:set var="isClientOnly" value="${fn:startsWith(syncClient.service, 'client://') }" />
 						<li>
 							<h3>
-								<c:out value="${syncClient.name}" />
+								<c:out value="${syncClient.name}" /><!-- keep me -->
 							</h3>
 							
 							<ul class="foldList">
@@ -209,12 +209,12 @@
 												<c:set var="status" value="${fn:toLowerCase(clientSyncData.status)}" />
 												<li class="${fn:toLowerCase(status)}">
 													<fmt:message key="resourceType.${clientSyncData.resourceType.simpleName}.plural"/> - <fmt:message key="synchronization.result.${status}"/> - <fmt:formatDate value="${clientSyncData.lastSyncDate}" type="both" timeStyle="short" dateStyle="medium" />
-												</li>											
+												</li>
 											</c:otherwise>
 										</c:choose>
 										<c:set var="lastDeviceId" value="${deviceId}" />
 									</c:if>
-								</c:forEach>								
+								</c:forEach>
 							</ul>
 						</li>
 					</c:forEach>
