--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardPublication.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardPublication.jspx
@@ -12,11 +12,11 @@
 	<layout:editGoldStandardPostLayout command="${command}" requPath="${requPath}" resourceType="GoldStandardPublication" minimizedContentWidth="${true}">
 		
 		<jsp:attribute name="generalInformation">
-			<editpub:required post="${post}" autocompletion="$(false)"/>
+			<editpub:required post="${command.post}" autocompletion="$(false)"/>
 		</jsp:attribute>
 
         <jsp:attribute name="detailedInformation">
-			<editpub:details post="${post}" />
+			<editpub:details post="${command.post}" />
        	</jsp:attribute>
        
 		<jsp:attribute name="headerExtResource">
